@@ -1,3 +1,10 @@
+2005-02-17  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC1-cvs-b8
+
+	* Change: Add a new config option for bypassing our register_globals-disabled
+	  emulation.  I do this unwillingly, and it is not a supported
+	  configuration due to the potential for security issues and other problems
+	  bug some people require the option.
+
 2005-02-15  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC1-cvs-b7
 
 	* Fix: Move SMTP execution into its own function to be 
